added image library selection and image upload: need to parse response to get file location on server for insertion into main data store

--- a/.gitignore
+++ b/.gitignore
@@ -43,6 +43,8 @@ Thumbs.db
 *.sencha
 *.senchasdk
 
+build.xml
+
 # Files with information that should not be made available to the public #
 ######################
 app.js
