--- a/app.json
+++ b/app.json
@@ -102,9 +102,9 @@
      * Extra resources to be copied along when build
      */
     "resources": [
-                  "resources/images",
-                  "resources/icons",
-                  "resources/startup"
+                  "/resources/images",
+                  "/resources/icons",
+                  "/resources/startup"
                   ],
     
     /**
