--- a/.gitignore
+++ b/.gitignore
@@ -52,7 +52,7 @@ build/*
 
 # Files with information that should not be made available to the public #
 ######################
-app.js
+#app.js
 
 archive/*
 
