--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,9 @@
 *.cache
 resources/sass/.sass-cache/*
 
+touch/*
+.idea/*
+native/*
 # Packages #
 ############
 # it's better to unpack these files and commit the raw source
